style(biome): add biome

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,5 +24,10 @@ repos:
     rev: v4.0.0-alpha.8
     hooks:
       - id: prettier
-        types_or: [markdown, toml, jsx, javascript, json, html, css, scss, yaml]
-        args: [--prose-wrap=always]
+        types_or: [markdown, toml, html, css, scss, yaml]
+        args: [--config=.prettierrc]
+  - repo: https://github.com/biomejs/pre-commit
+    rev: "v0.4.0"
+    hooks:
+      - id: biome-check
+        additional_dependencies: ["@biomejs/biome@1.8.2"]
